--- a/src/main/resources/templates/nameage/result.html
+++ b/src/main/resources/templates/nameage/result.html
@@ -5,14 +5,21 @@
     <title>Result</title>
 </head>
 <body>
-<h1>Welcome to result page </h1>
-
+<h1>The result</h1>
 <b>The name: </b>
-<p th:text="${nameAge.getName()}">VALUE</p>
+<a th:text="${nameAge.getName()}">VALUE</a>
+<br>
 <b>The age: </b>
-<p th:text="${nameAge.getAge()}"/>
+<a th:text="${nameAge.getAge()}">VALUE</a>
+<br>
+<br>
 <a href="/main">
     <button>Try again</button>
+</a>
+<br>
+<br>
+<a href="/statistics">
+    <button>Session statistics</button>
 </a>
 </body>
 </html>
